--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
 	<title>Menal Khan's Portfolio</title>
 
 	<meta charset="UTF-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<meta name="description" content="An Aspiring Full-Stack Developer's Portfolio">
 	<meta name="keywords" content="resume, web developer, developer, portfolio">
 	<meta name="author" content="Menal Khan">
