--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section>
 				<h2>About Me</h2>
 				<div id="section_grey_line"></div>
-				<img id="diplaypic" src="pictureofmenal.jpg" alt="A Picture of Menal">
+				<img id="displaypic" src="pictureofmenal.jpg" alt="A Picture of Menal">
 				<p>I have always had a liking for web development since I was in Grade 7. Over the years I ventured off this path, and rekindled my love after taking on a social media correspondant role that had development-related responsibilities in the mix.</p>
 				<br/>
 				<p>Now I am pursuing the role of a Full-Stack Developer by taking a few classes at the University of Toronto. I hope it takes my career to the level I want it to be at. </p>
